# enpm702-internal

./: CMakeLists.txt
assignment1/: CMakeLists.txt  READMe.txt
assignment1/src/: assignment1.cpp
assignment2/: CMakeLists.txt
assignment2/src/: main.cpp
